apps/sickrage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sickrage
  labels:
    app: sickrage
    version: v0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sickrage
      version: v0
  template:
    metadata:
      labels:
        app: sickrage
        version: v0
    spec:
      containers:
      - name: sickrage
        image: linuxserver/sickrage
        resources:
          limits:
            cpu: "800m"
            memory: "512Mi"
          requests:
            cpu: "500m"
            memory: "256Mi"
        ports:
        - containerPort: 8081
          name: sickrage-http
        volumeMounts:
        - name: sickrage-config
          mountPath: /config
        - name: sickrage-download
          mountPath: /downloads
        - name: sickrage-tv
          mountPath: /tv
        imagePullPolicy: Always
      volumes:
      - name: sickrage-config
        persistentVolumeClaim:
          claimName: sickrage-config
      - name: sickrage-download
        persistentVolumeClaim:
          claimName: sabnzbd-download
      - name: sickrage-tv
        persistentVolumeClaim:
          claimName: lib-movies
