apps/sickrage/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sickrage
  labels:
    app: sickrage
    kubernetes.io/name: "sickrage"
spec:
  selector:
    app: sickrage
  ports:
  - name: sickrage
    port: 8081
    targetPort: 8081
  type: ClusterIP
